class material fixes

--- a/lab4-under-construction/class-assignment/lab4-class-part1.ipynb
+++ b/lab4-under-construction/class-assignment/lab4-class-part1.ipynb
@@ -84,7 +84,7 @@
     "\n",
     "---\n",
     "\n",
-    "Recall semantic feature analysis from last session. In the code cell below we show an example of an analysis with three features that we used last time."
+    "Recall semantic feature analysis from last session. In the code cell below we show an example of an analysis with three features."
    ]
   },
   {
@@ -103,15 +103,13 @@
     "\n",
     "# Features are binary; 0 means 'not defined'\n",
     "words = [\n",
-    "    (\"child\", [ 1, -1,  0]),\n",
     "    (\"girl\",  [ 1, -1, -1]),\n",
     "    (\"boy\",   [ 1, -1,  1]),\n",
     "    (\"adult\", [ 1,  1,  0]),\n",
     "    (\"woman\", [ 1,  1, -1]),\n",
-    "    (\"man\",   [ 1,  1,  1]),\n",
     "    (\"calf\",  [-1, -1,  0]),\n",
-    "    (\"bull\",  [-1,  1,  1]),\n",
-    "    (\"cow\",   [-1,  1, -1])\n",
+    "    (\"cow\",   [-1,  1, -1]),\n",
+    "    (\"mature\",[ 0,  1,  0])\n",
     "]\n",
     "\n",
     "plot_utils.plot_3d_binary(features, words)"
@@ -133,6 +131,8 @@
     "\n",
     "How do the similarities and angles change when you change the vectors? Can you see how the similarities relate to the figure?\n",
     "\n",
+    "Pick one word from the figure and come up with a new word so that the angle between the two is either 45°, 90°, or 180°. Figure out at least one new word for each angle.\n",
+    "\n",
     "---"
    ]
   },
@@ -145,27 +145,18 @@
    "outputs": [],
    "source": [
     "words = [\n",
-    "    (\"child\", [ 1, -1,  0]),\n",
     "    (\"girl\",  [ 1, -1, -1]),\n",
     "    (\"boy\",   [ 1, -1,  1]),\n",
     "    (\"adult\", [ 1,  1,  0]),\n",
     "    (\"woman\", [ 1,  1, -1]),\n",
-    "    (\"man\",   [ 1,  1,  1]),\n",
     "    (\"calf\",  [-1, -1,  0]),\n",
-    "    (\"bull\",  [-1,  1,  1]),\n",
-    "    (\"cow\",   [-1,  1, -1])\n",
+    "    (\"cow\",   [-1,  1, -1]),\n",
+    "    (\"mature\",[ 0,  1,  0])\n",
     "]\n",
     "\n",
     "tabulate_similarities(words)\n",
     "tabulate_angles(words)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
