--- a/lab4-under-construction/class-assignment/lab4-class-part3.ipynb
+++ b/lab4-under-construction/class-assignment/lab4-class-part3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,9 +37,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Section 1: Dot product\n",
+    "### Section 3.1: Dot product\n",
     "---\n",
-    "Let's start by investigating the dividend in the equation:\n",
+    "Let's start by investigating the numerator in the equation:\n",
     "\n",
     "$v \\cdot w = \\sum_{i=1}^{N} v_i w_i$\n",
     "\n",
@@ -83,17 +83,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result: 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def dot(v, w):\n",
     "    \"\"\"Compute the dot product of the vectors v and w.\"\"\"\n",
@@ -111,18 +103,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Section 2: The length of a vector\n",
+    "### Section 3.2: The length of a vector\n",
     "----\n",
     "\n",
-    "Now that we have the dot product out of the way, we can move on to the divisor in the original equation.\n",
+    "Now that we have the dot product out of the way, we can move on to the denumerator in the original equation.\n",
     "\n",
     "$\\lvert v \\rvert \\lvert w \\rvert = \\sqrt{\\sum_{i=1}^{N} v_i^2} \\sqrt{\\sum_{i=1}^{N} w_i^2}$\n",
     "\n",
-    "$\\lvert v \\rvert$ is the length of the vector $v$, so in the equation above we multiply the lengths of the two vectors. Let's see how we can compute the length (also called **l²-norm**) of a single vector:\n",
+    "$\\lvert v \\rvert$ is the length of the vector $v$, so in the equation above we multiply the lengths of the two vectors. Let's see how we can compute the length (also called **L2-norm**) of a single vector:\n",
     "\n",
     "$\\lvert v \\rvert = \\sqrt{\\sum_{i=1}^{N} v_i^2}$\n",
     "\n",
-    "Again in plain English the equation says: square each element in the vector $v$, sum the elements of the resulting vector, and square the sum. Let's once again illustrate this with some actual values.\n",
+    "Again in plain English the equation says: square each element in the vector $v$, sum the elements of the resulting vector, and take the square root of the sum. Let's once again illustrate this with some actual values.\n",
     "\n",
     "---\n",
     "\n",
@@ -174,17 +166,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.7416573867739413\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def l2norm(v):\n",
     "    \"\"\"Calculate the length (l2-norm) of the vector v.\"\"\"\n",
@@ -201,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Section 3: Putting it all together\n",
+    "### Section 3.3: Putting it all together\n",
     "---\n",
     "We now have all the necessary building blocks for computing the cosine similarity.\n",
     "\n",
@@ -221,18 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n",
-      "-1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cosine_similarity(v, w):\n",
     "    \"\"\"Compute the cosine similarity between the vectors v and w.\"\"\"\n",
