--- a/lab4-under-construction/class-assignment/lab4-class-part2.ipynb
+++ b/lab4-under-construction/class-assignment/lab4-class-part2.ipynb
@@ -24,7 +24,9 @@
     "import sys\n",
     "sys.path.append(\"../../src/\")\n",
     "\n",
-    "from lab4utils import embed, to_feature_matrix, plot_dendrogram, plot_kmeans\n",
+    "from lab4utils import embed, to_feature_matrix, \\\n",
+    "                      plot_dendrogram, plot_kmeans, \\\n",
+    "                      get_clusters_at_cutoff\n",
     "from sklearn.cluster import AgglomerativeClustering, KMeans"
    ]
   },
@@ -96,8 +98,8 @@
     "**Ex 2.2.1** Again, try out different words. This time the number of clusters isn't the most important thing. As you might notice, the number you define doesn't change the structure of the resulting hierachy. What it changes is the \"depth\" where the algorithm groups the words into clusters. These clusters are shown after the word labels (`word/cluster_id`). Think about the following questions:\n",
     "\n",
     "- Do you see any potential benefits to using a hierarchical clustering instead of a flat one like k-means? Any problems? \n",
-    "- Do the resulting clusters from this method match on to the clusters produces by k-means?\n",
-    "- Do the resulting clusters change when you run the algorithm multiple times?\n",
+    "- Do the resulting clusters from this method match on to the clusters produced by k-means?\n",
+    "- Do the clusters change when you run the algorithm multiple times?\n",
     "\n",
     "---"
    ]
@@ -106,7 +108,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -125,6 +127,34 @@
     "    \n",
     "# Plot results\n",
     "plot_dendrogram(model, labels=words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "**Ex 2.2.2** In this exercise you have a chance to make sure you understand how the final clusters can be determined from the dendrogram. \n",
+    "\n",
+    "In the code cell below you are given a function `get_clusters_at_cutoff`, that takes the clustering `model`, the source words and a cutoff value as arguments. It will print out the clusters that we would get if we cut off the hierarchy at a depth determined by the value *(Note: Depth in this case is calculated \"bottom-up\")*. \n",
+    "\n",
+    "In the example code we use a cutoff value 9. In that case all the words end up in a single cluster.\n",
+    "\n",
+    "Now make sure you understand how that is determined. Look at the dendrogram above, and try to predict what kind of clusters form at a certain depth. Then use the function below to check if you predicted correctly. \n",
+    "\n",
+    "Try this with a few different sets of words and cutoff values.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_clusters_at_cutoff(model, words, 9)"
    ]
   }
  ],
