rename stuff, del sys path appends

--- a/lab4/class-assignment/lab4-class-part1.ipynb
+++ b/lab4/class-assignment/lab4-class-part1.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "---\n",
     "\n",
-    "In this lab session we will have two main topics: **similarity** and **clustering**. Last time we learned how to work with distributed representations of meaning (vectors). Through visualizations and studying word occurences and their contexts in corpora, we tried to get an intuitive understanding of what the notion of *meaning as a vector* is all about. We also examined the notion of *similarity* visually. \n",
+    "In this lab session we have two main topics: **similarity** and **clustering**. Last time we learned how to work with distributed representations of meaning (vectors). Through visualizations and studying word occurences and their contexts in corpora, we tried to get an intuitive understanding of what the notion of *meaning as a vector* is all about. We also examined the notion of *similarity* visually. \n",
     "\n",
     "In this first part we will move toward more rigorous study of similarity. We will introduce a mathematical measure called **cosine similarity** and see how it relates to the visualizations we made last time.\n",
     "\n",
@@ -23,9 +23,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../src/\")\n",
-    "\n",
     "import plot_utils\n",
     "from lab4utils import cosine_similarity, embed, get_words, \\\n",
     "                      get_mapping, get_top, plot_w2v_2d, plot_w2v_3d, \\\n",
@@ -125,7 +122,7 @@
     "\n",
     "---\n",
     "\n",
-    "**Ex 1.2.1** Run the code cell below, examine the output and cmpare the tables to the figure above.\n",
+    "**Ex 1.2.1** Run the code cell below, examine the output and compare the tables to the figure above.\n",
     "\n",
     "Change some of the vectors or add new ones to the list `words`. You can also also analyze some other set of words using you own features.\n",
     "\n",
@@ -144,16 +141,7 @@
    },
    "outputs": [],
    "source": [
-    "words = [\n",
-    "    (\"girl\",  [ 1, -1, -1]),\n",
-    "    (\"boy\",   [ 1, -1,  1]),\n",
-    "    (\"adult\", [ 1,  1,  0]),\n",
-    "    (\"woman\", [ 1,  1, -1]),\n",
-    "    (\"calf\",  [-1, -1,  0]),\n",
-    "    (\"cow\",   [-1,  1, -1]),\n",
-    "    (\"mature\",[ 0,  1,  0])\n",
-    "]\n",
-    "\n",
+    "# 'words' was defined in the code cell above\n",
     "tabulate_similarities(words)\n",
     "tabulate_angles(words)"
    ]
