--- a/lab4/class-assignment/lab4-class-part2.ipynb
+++ b/lab4/class-assignment/lab4-class-part2.ipynb
@@ -21,9 +21,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../src/\")\n",
-    "\n",
     "from lab4utils import embed, to_feature_matrix, \\\n",
     "                      plot_dendrogram, plot_kmeans, \\\n",
     "                      get_clusters_at_cutoff\n",
@@ -89,13 +86,13 @@
     "\n",
     "---\n",
     "\n",
-    "in this section we will look at the second method: **hierarchical agglomerative clustering**. The method is hierarchical because it gives us a hierarchy of clusters instead of the flat, structureless clusters of k-means. We can investigate the hierarchy at different levels, resulting in different clusters depending on the level where we decide to group the words. Agglomerative means that the algorithm works in a bottom-up manner. Initially, each word is considered its own cluster. The clusters are then iteratively merged until we end up with one cluster. This results in the hierarchical structure.\n",
+    "in this section we will look at the second method: **hierarchical agglomerative clustering**. The method is hierarchical because it gives us a hierarchy of clusters instead of the flat, structureless clusters of k-means. We can investigate the hierarchy at different depths, resulting in different clusters depending on the level where we decide to group the words. Agglomerative means that the algorithm works in a bottom-up manner. Initially, each word is considered its own cluster. The clusters are then iteratively merged until we end up with one cluster. This results in the hierarchical structure.\n",
     "\n",
     "All of this is easier to see in a dendrogram. Run the code cell below to see the results.\n",
     "\n",
     "---\n",
     "\n",
-    "**Ex 2.2.1** Again, try out different words. This time the number of clusters isn't the most important thing. As you might notice, the number you define doesn't change the structure of the resulting hierachy. What it changes is the \"depth\" where the algorithm groups the words into clusters. These clusters are shown after the word labels (`word/cluster_id`). Think about the following questions:\n",
+    "**Ex 2.2.1** Again, try out different words. This time the number of clusters isn't the most important thing. As you might notice, the number you define doesn't change the structure of the resulting hierachy. What it changes is the depth where the algorithm groups the words into clusters. These clusters are shown after the word labels (`word/cluster_id`). Think about the following questions:\n",
     "\n",
     "- Do you see any potential benefits to using a hierarchical clustering instead of a flat one like k-means? Any problems? \n",
     "- Do the resulting clusters from this method match on to the clusters produced by k-means?\n",
@@ -137,7 +134,7 @@
     "\n",
     "**Ex 2.2.2** In this exercise you have a chance to make sure you understand how the final clusters can be determined from the dendrogram. \n",
     "\n",
-    "In the code cell below you are given a function `get_clusters_at_cutoff`, that takes the clustering `model`, the source words and a cutoff value as arguments. It will print out the clusters that we would get if we cut off the hierarchy at a depth determined by the value *(Note: Depth in this case is calculated \"bottom-up\")*. \n",
+    "In the code cell below you are given a function `get_clusters_at_cutoff`, that takes the clustering `model`, the source words and a cutoff value as arguments. It will print out the clusters that we would get if we cut off the hierarchy at the depth determined by the value *(Note: Depth in this case is calculated \"bottom-up\")*. \n",
     "\n",
     "In the example code we use a cutoff value 9. In that case all the words end up in a single cluster.\n",
     "\n",
