--- a/lab4/class-assignment/lab4-class-part3.ipynb
+++ b/lab4/class-assignment/lab4-class-part3.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "In three steps:\n",
     "\n",
-    "1. Element-wise multiply the vectors v and w. You can assing the result to a variable called `mul_result`, for example.\n",
+    "1. Element-wise multiply the vectors v and w. You can assign the result to a variable called `mul_result`, for example.\n",
     "2. Sum the elements of the resulting vector. Do this using `np.sum`. For example: `np.sum(mul_result)`.\n",
     "3. Return the sum.\n",
     "\n",
