--- a/lab4/home-assignment/lab4-home.ipynb
+++ b/lab4/home-assignment/lab4-home.ipynb
@@ -17,9 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../src\")\n",
-    "\n",
     "import plot_utils\n",
     "import operator\n",
     "\n",
@@ -120,9 +117,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../src\")\n",
-    "\n",
     "import distribsem\n",
     "import numpy as np\n",
     "import operator\n",
@@ -138,13 +132,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this task we will train out embeddings on our own text. As you might guess, you have two choices; you can use either *Moby Dick* or *Sense and Sensibility*. The first code cell below contains the code for training the embeddings. As last time, `vocab_size` means how many words we will train embeddings for, `dimensionality` is the size of the context vocabulary (and consequently the dimensionality of the embeddings), `window_size` tells how many words we will take into account on each side of the target word, and `text` is the text we train the embeddings on (either `moby_dick` or `sense_and_sensibility`).\n",
+    "In this task we will train embeddings on our own text. As you might guess, you have two choices; you can use either *Moby Dick* or *Sense and Sensibility*. The first code cell below contains the code for training the embeddings. Like last time, `vocab_size` means how many words we will train embeddings for, `dimensionality` is the size of the context vocabulary (and consequently the dimensionality of the embeddings), `window_size` tells how many words we will take into account on each side of the target word, and `text` is the text we train the embeddings on (either `moby_dick` or `sense_and_sensibility`).\n",
     "\n",
-    "Last time we thought examined the word contexts and tried to figure out how different window sizes and dimensionalities affect the resulting word embeddings. This time we will examine how the different parameters affect the clustering.\n",
+    "Last time we examined the word contexts and tried to figure out how different window sizes and dimensionalities affect the resulting word embeddings. This time we will examine how the different parameters affect the clustering.\n",
     "\n",
     "---\n",
     "\n",
-    "**Your task** is to train word embeddings on one of the two texts using different dimensionalities and window sizes. Try at least **two different dimensionality/window size-combinations**. For each combination, try out different numbers of clusters like in the first task. Answer as comments in one of the code cells: \n",
+    "**Your task** is to train word embeddings on one of the two texts using different dimensionalities and window sizes. Try at least **two different dimensionality/window size-combinations**. For each combination, try out different numbers of clusters like in the first task. Answer the following questions as comments in one of the code cells: \n",
     "\n",
     "**2.1** How do the dimensionalities/window sizes affect the resulting clustering?'\n",
     "\n",
