--- a/lab4/class-assignment/lab4-class-part2.ipynb
+++ b/lab4/class-assignment/lab4-class-part2.ipynb
@@ -46,7 +46,7 @@
     "Try out different words and numbers of clusters and think about the following questions: \n",
     "\n",
     "- How well does the clustering work?\n",
-    "- Which words seems to work best?\n",
+    "- Which words seem to work best?\n",
     "- What kind of categories do you think the clusters represent?\n",
     "- Is there a number of clusters that gives sensible results most of the time, or one that doesn't work at all?\n",
     "- Do you see any problems with having to define the number of clusters yourself?\n",
@@ -116,7 +116,7 @@
     "# Represent the words in a suitable way for the clustering algorithm\n",
     "X = to_feature_matrix(words)\n",
     "# Initialize clustering algorithm\n",
-    "model = AgglomerativeClustering(n_clusters=4)\n",
+    "model = AgglomerativeClustering(n_clusters=clusters)\n",
     "model = model.fit(X)\n",
     "\n",
     "# Train model\n",
